--- build 1012

- fix downloads failures on some devices
- fix bug where incomplete previous download caused all future downloads to fail

--- build 1011

- Home screen now shows your saved stories

--- build 1010

- Fix Youssef's crash
- ReviewCard now works for Audio and Photo stories
- Many narration bugfixes

--- build 1009

- fix issue blocking uploads until you closed and reopened app
- fix uploads to Youtube

--- build 1008

- allow user to view their content after publishing to Facebook, Youtube and Flickr
- fix when rendering for Facebook
- fix publishing stories with media that was imported